--- a/CSS/style.css
+++ b/CSS/style.css
@@ -750,11 +750,11 @@ padding-left: 20px;
 }
 
 .we__offer_content h2{
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-weight: 700;
   padding: 20px 12px;
   color: #03003f;
-
+  line-height: 1.8rem;
 }
 
 .we__offer_content a{
