--- a/Baoiam-refer-page-main/refer.css
+++ b/Baoiam-refer-page-main/refer.css
@@ -1,39 +1,290 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap'); 
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Open Sans','PT Sans';
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
+
+body{
+  overflow-x: hidden;
+}
+:root {
+  --color-orange: linear-gradient(45deg, #fa2424, #ed7e1e);
+  --color-white: #ffffff;
+  --box-shadow: 0px 0px 50px 0px rgb(0 0 0/10%);
+}
+
+.orange-color{
+  position: relative; 
+  background: -webkit-linear-gradient(0deg,#fa2424, #fb8721);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+a{
+  text-decoration: none !important;
+}
+
+
+img {
+  width: 100%;
+}
+
+.btn-3 {
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0.5rem 1.5rem;
+  background: -webkit-linear-gradient(45deg, #ff0000, #ff8000);
+  -webkit-text-fill-color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  transition: 3s;
+}
+
+.btn-1:hover {
+  background: -webkit-linear-gradient(45deg, #ff8000, #ff0000);
+}
+
+
+header {
+  background: var(--color-white);
+  z-index: 1 !important;
+  box-shadow: rgb(49, 49, 49);
+}
+
+header .nav-item {
+  padding: 0.5rem;
+}
+
+header .nav-item a {
+  padding-top: 0.7rem;
+  color: rgb(6, 0, 56) !important;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+header .navbar-brand{
+  padding-left:4rem;
+}
+
+header .navbar-nav{
+  padding-right:4rem;
+}
+
+header img {
+  width: 120px;
+}
+
+
+header .nav-item a:hover {
+  color: #ec4f01 !important;
+}
+
+.btn-1 {
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0.8rem 2rem;
+  background: -webkit-linear-gradient(45deg, #ff0000, #ff8000);
+  -webkit-text-fill-color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  transition: 3s;
+}
+
+.btn-1:hover {
+  background: -webkit-linear-gradient(45deg, #ff8000, #ff0000);
+}
+
+
+
+
+.underline{
+  position: relative; 
+  background: -webkit-linear-gradient(0deg,#fa2424, #fb8721);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  border-bottom: 2px solid rgb(245, 69, 0);
+}
+
+.subscribe{
+  position: relative;
+  margin-bottom: -5rem;
+  background: -webkit-linear-gradient(0deg,#fa2424, #fb8721);
+  border-radius: 15px;
+  color: #fff;
+}
+
+#subscribe h2{
+  font-weight: 700;
+}
+
+.form{
+  background: #ffffff;
+  padding: 5px 5px;
+  border-radius: 10px;
+  
+}
+
+.form input{
+  border-radius: 5px;
+  border-style: none;
+  color: rgb(29, 29, 29);
+  background-color: white;
+  padding:9px 2.5rem;
+  outline: none;
+}
+
+.social a{
+  margin-right: 0.5rem;
+}
+@media (max-width: 991px) {
+
+    header .navbar-brand{
+      padding-left:3rem;
+    }
+    
+    header .navbar-nav{
+      padding-right:3rem;
+    }
+
+    .form input{
+      padding:9px 1rem;
+    }
+}
+
+@media (max-width: 769px) {
+  .form input{
+    padding:9px 2.6rem;
+  }
+}
+
+
+@media (max-width: 576px){
+
+  header .navbar-brand{
+    padding-left:1rem;
+  }
+  
+  header .navbar-nav{
+    padding-right:1rem;
+  }
+  .form input{
+    border-radius: 5px;
+    border-style: none;
+    color: rgb(29, 29, 29);
+    background-color: white;
+    padding:9px 1.5rem;
+    outline: none;
+  }
+}
+
+
+footer{
+  display: relative;
+  background-color: #000121;
+  /* height: 100vh; */
+}
+
+.footer-container{
+  padding-top: 9rem !important;
+  padding: 1rem 4% ;
+}
+
+.footer-end-container{
+  padding: 1rem 6% ;
+}
+footer .row h6{
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+#hr-line{
+  width: 60px; 
+  background:var(--color-orange); 
+  height: 1.5px;
+}
+
+footer .contact-us p i{
+  background: var(--color-orange);
+  font-weight: 700;
+}
+
+footer .contact-us p div i{
+  background: var(--color-orange);
+  font-weight: 700;
+}
+
+.footer-end{
+  background: -webkit-linear-gradient(0deg,#fa2424, #fb8721);
+}
+
+.social {
+  padding-right: 5px;
+}
+
+.social a {
+  height: 37px;
+  width: 37px;
+  background: #fa2424;
+  color: #fff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 21px;
+  border-radius: 15px;
+  margin-top: 20px;
+  transition: 1s;
+}
+
+.social a:hover {
+  background: #fff;
+  color:#fa2424;
+}
+
+
+
 .homepage{
-    padding: 100px 100px;
+    margin: 50px 100px;
     /* background: url("/abstract-background-illustration-watercolor-blue-green.jpg"); */
-    margin-top: 100px;
-    margin-bottom: 30px;
+    margin-top: 160px;
+   
 }
 .refer_row{
     display: flex;
-    justify-content:space-between;
+    justify-content:center;
+    
 }
 .rf_col{
-    padding: 20px;
+    width:50%;
+    margin: 40px 0;
 }
 .rf_col h3{
-    font-size: 70px;
+    font-size: 65px;
+    color:#031864;
+    font-weight: bold; 
+}
+
+.rf_col h3 span{
+    font-size: 65px;
     background: -webkit-linear-gradient(45deg,#fa2424,#fb8721);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-weight: 700; 
+    border-bottom: 2px solid red;
 }
+
 .rf_col h4{
     font-size:30px;
-    background: -webkit-linear-gradient(45deg,#0a3fff,#6cff87b0);
+    background: -webkit-linear-gradient(45deg,#011352,#789d7fb0);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-weight: 600;
-    margin-bottom: 15px;
+    font-weight: bold;
+    margin: 35px 0;
 
 }
 .rf_col h4 span{
@@ -42,18 +293,19 @@
     color: #080404;
 }
 .rf_col p{
-    font-size: 16px;
+    font-size: 20px;
     color: gray;
     padding-bottom: 10px;
     font-weight: 500;
+    line-height: 1.7;
 }
 
 form{
-    margin-left: 10px;
+    border-radius: 15px;
     padding: 8px 15px;
     background: #ffffff;
     width: fit-content;
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 5px 5px 10px rgb(180, 174, 174);
     margin-top: 20px;
     
 }
@@ -67,7 +319,7 @@ form input{
 }
 .bttn{
     margin-left: 10px;
-    background: #6d44b8;
+    background:linear-gradient(45deg,#fb8721,#fa2424);
     border-style: none;
     border-radius: 10px;
     padding: 12px;
@@ -85,8 +337,12 @@ form input{
     transform:translateY(-5px);
 
 }
+
+.rf_col2{
+    width:45%;
+}
 .rf_col2 img{
-    width: 700px;
+    width: 90%;
 }
 /* ---------------how---------- */
 .how{
@@ -97,13 +353,20 @@ form input{
 }
 
 .titale h2{
-    background-image: -webkit-linear-gradient(45deg,#fa2424,#fb8721);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    font-size: 55px;
+    color:#031864;
+    font-weight: bold;
     text-align: center;
-    font-size: 50px;
     margin-bottom: 20px;
 
+}
+
+.titale h2 span{
+    font-size: 55px;
+    background: -webkit-linear-gradient(45deg,#fa2424,#fb8721);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    border-bottom: 2px solid red;
 }
 /* .titale h2 span{
     background: -webkit-linear-gradient(45deg,#3a65ff,#6cff87b0);
@@ -112,10 +375,13 @@ form input{
 } */
 .titale p{
     padding:0 200px ;
-    font-size: 16px;
+    margin-top: 40px;
+    font-size: 18px;
     text-align: center;
     margin-bottom: 30px;
     color: gray;
+    font-weight: 500;
+    line-height: 1.7;
 }
 
 .content_list1{
@@ -124,25 +390,16 @@ form input{
     justify-content: space-between;
     text-align: center;
 }
-.content_data1{
+.content_data{
+    margin-top: 45px;
     box-shadow: 5px 5px 10px gray;
     flex-basis: 30%;
     /* border: 2px solid red; */
     padding: 50px 50px;
     /* background: white; */
+    border-radius:80px 14px;
 }
-.content_data2{
-    box-shadow: 5px 5px 10px gray;
-    flex-basis: 30%;
-    /* border: 2px solid red; */
-    padding: 50px 50px;
-}
-.content_data3{
-    box-shadow: 5px 5px 10px gray;
-    flex-basis: 30%;
-    /* border: 2px solid red; */
-    padding: 50px 50px;
-}
+
 .data_list i{
     padding:  10px 15px;
     /* border: 2px solid red; */
@@ -157,9 +414,12 @@ form input{
     margin-bottom: 10px;
     color: rgb(1, 1, 96);
     font-size: 25px;
+    font-weight: bold;
 }
 .data_list p{
     color: gray;
+    font-size: 18px;
+    font-weight: 500;
 }
 .refer_buttom{
     text-align: center;
@@ -185,7 +445,7 @@ form input{
     transform: scale(1.1);
 }
 .arrow{
-    padding-top: 105px;
+    padding-top: 155px;
 }
 .arrow i{
     /* border: 2px solid red ; */
@@ -200,33 +460,41 @@ form input{
 }
 .why_list{
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: center;
+    
 }
 .list1{
     flex-basis: 50%;
 }
 .list2{
     flex-basis: 40%;
+   
 }
 .list2 img{
-    margin-top: 30px;
+    margin-top: 50px;
     width: 450px;
-    border-radius:30% 10% 30% ;
-    box-shadow: 4px 4px 8px 2px rgba(96, 96, 96, 0.729);
+    float: right;
+ /*   border-radius:30% 10% 30% ;
+    box-shadow: 4px 4px 8px 2px rgba(96, 96, 96, 0.729); */
 }
 .why_head{
-    text-align: center;
+    
     font-size: 18px;
     color: gray;
-    padding: 0 20px 20px;
+    padding:20px 0px;
 }
 .why_head h3{
+    font-size: 55px;
+    color:#031864;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.why_head h3 span{
     background-image: -webkit-linear-gradient(45deg,#fa2424,#fb8721);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 50px;
-    padding-bottom: 10px;
+    border-bottom:2px solid red;
 }
 .why_content_data{
     display: flex;
@@ -238,10 +506,10 @@ form input{
 .icons i{
     /* border: 2px solid red; */
     width: fit-content;
-    font-size: 20px;
+    font-size: 25px;
     border-radius: 30%;
     box-shadow: 1px 1px 12px 4px rgb(211, 207, 207);
-    padding: 10px;
+    padding: 10px 12px;
     color: #fa2424;
     margin-right: 10px;
     margin-bottom: 20px;
@@ -254,126 +522,311 @@ form input{
 }
 .why_content_data_list h3{
     color: rgb(1, 1, 96);
-    padding-bottom: 10px;
+    padding-bottom: 0px;
     font-size: 20px;
+    font-weight: bold;
     /* font-weight: 700; */
 }
+
+.why_content_data_list p{
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.6;
+}
 /* -----------faq------------- */
-.faq{
+
+.container-main{
+    display: flex;
+    justify-content: center;
+    margin: 50px 95px;
+  }
+
+  .accordion {
+    width: 72%;
+    max-width: 1000px;
+    margin: 2rem auto;
+    
+  }
+  
+  .ac-main h1{
     margin-top: 50px;
-    padding: 10px 100px;
-}
-.header{
+    font-size: 50px;
     text-align: center;
-    color: gray;
-    font-size: 20px;
+    color:#031864;
+    font-weight: bold; 
 }
-.header h3{
-    background-image: -webkit-linear-gradient(45deg,#fa2424,#fb8721);
+
+.ac-main h1 span{
+    font-size: 50px;
+    background: -webkit-linear-gradient(45deg,#fa2424,#fb8721);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 50px;
-    padding-bottom: 15px;
+    border-bottom: 2px solid red;
 }
-.faq_questions{
-    padding: 20px;
-    margin-top: 20px;
-    text-align: center;
-}
-.all_questions{
-    color: rgb(91, 91, 91);
-    font-size: 18px;
-    margin: 30px 200px;
-    padding-bottom: 50px;
+  .accordion-item {
+    background-color: #fff;
+    color: #050237;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
+  }
+  
+  .accordion-item-header {
+    padding: 0.5rem 3rem 0.5rem 1rem;
+    min-height: 3.5rem;
+   
+   
+    font-weight: bold;
     display: flex;
-    padding-left: 40px;
-    justify-content: space-evenly;
-}
-.testing{
-    flex-basis: 70%;
-}
-.faq_icon{
-    flex-basis: 20%;
-}
-.all_questions h5{
-    font-size: 25px;
-    padding-bottom: 15px;
-    color: rgb(2, 2, 72);
-}
-
-.faq_icon i{
-    font-size: 50px;
-}
-.faq_close .testing p{
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+  }
+  
+  .accordion-item-header:hover{
+    color:rgb(251, 96, 13);
+    font-size: 1.05rem;
+  } 
+  .accordion-item-header::after {
+    content: "\002B";
+    font-size: 2rem;
+    position: absolute;
+    right: 1rem;
+  }
+  
+  .accordion-item-header.active::after {
+    content: "\2212";
+  }
+  
+  .accordion-item-body {
+    max-height: 0;
     overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    color:rgb(99, 99, 99);
+    font-weight: 500;
+  }
+  
+  .accordion-item-body-content {
+    padding: 1rem;
+    line-height: 1.5rem;
+    border-top: 1px solid;
+    border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+  }
+  
+  .accordion-item-body-content ul{
+      margin: 0 15px;
+  }
+  
+  .img{
+      width:40%;
+     margin:100px 0;
+  }
+  
+  .img img{
+  width:95%;
+  }
+  
+
+
+
+@media screen and (max-width:1000px)
+{
+
+    .homepage{
+    margin: 50px 50px;
+    /* background: url("/abstract-background-illustration-watercolor-blue-green.jpg"); */
+    margin-top: 100px;
+   
 }
-.faq_open .faq_icon{
-    transform: rotate(180deg);
+   
+    .refer_row{
+        flex-direction: column;
+    }
+
+    .rf_col{
+    width:90%;
+    margin: 40px 0;
+}
+
+    .rf_col2{
+    width:90%;
+    float: none;
+}
+.rf_col2 img{
+    width: 90%;
 }
 
 
+/* HOW REFER WORK */
+
+.how{
+    padding: 60px 40px;
+    margin-bottom: 10px;
+    /* background: url("/abstract-background-illustration-watercolor-blue-green.jpg"); */
+
+}
+
+.titale h2{
+    font-size: 45px;
+}
+
+.titale h2 span{
+    font-size: 45px;
+}
 
 
+.titale p{
+    padding:0 50px ;
+}
 
 
+/* Why Baoiam */
+
+.why{
+    padding: 50px 50px;
+}
+
+.why_list{
+   flex-direction: column; 
+}
+
+.list2 img{
+    margin-top: 50px;
+    width: 90%;
+    float:none;
+}
+
+/* FAQ */
+.container-main{
+    flex-direction: column-reverse;
+    margin: 10px 50px;
+  }
+
+   .img{
+      width:90%;
+     margin:50px 0;
+  }
+  
+  .img img{
+  width:90%;
+  }
+  
+
+}
 
 
-@media screen and (max-width:375px)
+@media screen and (max-width:600px)
 {
     .homepage{
-        padding: 30px 20px;
+        margin: 50px 20px;
         /* background: url("/abstract-background-illustration-watercolor-blue-green.jpg"); */
-        margin-top: 50px;
-        margin-bottom: 30px;
-    }
-    .refer_row{
-        display: flex;
-        justify-content:space-between;
+        margin-top: 100px;
+       
     }
     .rf_col h3{
-        font-size: 50px;
-        background: -webkit-linear-gradient(45deg,#fa2424,#fb8721);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        font-weight: 700; 
+        font-size: 45px;
+        color:#031864;
+        font-weight: bold; 
     }
+    
+    .rf_col h3 span{
+        font-size: 45px;
+    }
+    
     .rf_col h4{
-        font-size:30px;
-        background: -webkit-linear-gradient(45deg,#0a3fff,#6cff87b0);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        font-weight: 600;
-        /* margin-bottom: 15px; */
+        font-size:25px;
+        margin: 35px 0;
     
     }
-    .rf_col2 img{
-        width: 600px;
-        margin-top: 30px;
-        padding: 10px;
-        padding-right: 20px;
+    .rf_col h4 span{
+        font-weight: 700;
+        font-size: 30px;
+        color: #080404;
     }
+
 
     .how{
-    padding: 20px 10px;
-    margin-bottom: 30px;
-    /* text-align: center; */
+        padding: 60px 20px;
+        margin-bottom: 10px;
+        /* background: url("/abstract-background-illustration-watercolor-blue-green.jpg"); */
+    
     }
+    
+    .titale h2{
+        text-align: center;
+        font-size: 40px;
+    }
+    
+    .titale h2 span{
+        font-size: 40px;
+    }
+    
+    
     .titale p{
-        /* padding:0 200px ; */
-        font-size: 16px;
-        /* text-align: center; */
-        margin-bottom: 30px;
-        color: gray;
+        padding:0 20px ;
+        text-align: justify;
+    }
+
+    .content_list1{
+        padding-top: 10px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .content_data{
+        margin-top: 30px;
+    }
+
+    .arrow{
+
+        padding-left: 50px;
+        padding-top: 0;
+        rotate: 90deg;
+    }
+    .arrow i{
+        /* border: 2px solid red ; */
+        /* padding: 6px; */
+        font-size: 35px;
+        color: #6d44b8;
     }
 
 
+    /* Why Baoiam */
 
+.why{
+    padding: 50px 20px;
+}
+
+.why_head h3{
+    font-size: 40px;
 }
 
 
 
 
+.list2 img{
+    margin-top: 0px;
+    width: 90%;
+    float:none;
+}
 
+
+.ac-main h1{
+    margin-top: 0px;
+    font-size: 40px;
+    text-align: center;
+    color:#031864;
+    font-weight: bold; 
+}
+
+.accordion {
+    width: 100%;
+    max-width: 1000px;
+    margin: 2rem 10px;
+    
+  }
+}
 
 
 
