--- a/career/css/style.css
+++ b/career/css/style.css
@@ -148,6 +148,7 @@ header .nav-item a:hover {
     
     header .navbar-nav{
       padding-right:3rem;
+      background-color: white;
     }
 
     .form input{
@@ -170,8 +171,10 @@ header .nav-item a:hover {
   
   header .navbar-nav{
     padding-right:1rem;
+    /* background-color: white; */
   }
   .form input{
+    width: 90%;
     border-radius: 5px;
     border-style: none;
     color: rgb(29, 29, 29);
@@ -385,8 +388,8 @@ body {
 
 .profile-card {
   position: relative;
-  width: 360px;
-  height: 360px;
+  width: 320px;
+  height: 320px;
   background: #ffffffd3;
   padding: 30px;
   border-radius: 50%;
@@ -403,7 +406,8 @@ body {
 .profile-card .img {
   position: relative;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  height: 90%;
   transition: .6s;
   z-index: 99;
 }
